--- a/Exilio.ioc
+++ b/Exilio.ioc
@@ -2,10 +2,12 @@
 CAD.formats=[]
 CAD.pinconfig=Dual
 CAD.provider=
-FREERTOS.IPParameters=Tasks01,configUSE_NEWLIB_REENTRANT,configUSE_PREEMPTION
+FREERTOS.IPParameters=Tasks01,configUSE_NEWLIB_REENTRANT,configUSE_PREEMPTION,configMAX_PRIORITIES,configUSE_RECURSIVE_MUTEXES
 FREERTOS.Tasks01=defaultTask,0,128,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL
+FREERTOS.configMAX_PRIORITIES=5
 FREERTOS.configUSE_NEWLIB_REENTRANT=0
 FREERTOS.configUSE_PREEMPTION=1
+FREERTOS.configUSE_RECURSIVE_MUTEXES=1
 File.Version=6
 KeepUserPlacement=false
 Mcu.CPN=STM32F107VCT6
