--- a/Exilio.ioc
+++ b/Exilio.ioc
@@ -1,4 +1,10 @@
 #MicroXplorer Configuration settings - do not modify
+ADC1.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_10
+ADC1.IPParameters=Rank-0\#ChannelRegularConversion,master,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,NbrOfConversionFlag
+ADC1.NbrOfConversionFlag=1
+ADC1.Rank-0\#ChannelRegularConversion=1
+ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_1CYCLE_5
+ADC1.master=1
 CAD.formats=[]
 CAD.pinconfig=Dual
 CAD.provider=
@@ -12,58 +18,60 @@ File.Version=6
 KeepUserPlacement=false
 Mcu.CPN=STM32F107VCT6
 Mcu.Family=STM32F1
-Mcu.IP0=FREERTOS
-Mcu.IP1=NVIC
-Mcu.IP2=RCC
-Mcu.IP3=SYS
-Mcu.IP4=TIM7
-Mcu.IPNb=5
+Mcu.IP0=ADC1
+Mcu.IP1=FREERTOS
+Mcu.IP2=NVIC
+Mcu.IP3=RCC
+Mcu.IP4=SYS
+Mcu.IP5=TIM7
+Mcu.IPNb=6
 Mcu.Name=STM32F107V(B-C)Tx
 Mcu.Package=LQFP100
 Mcu.Pin0=PE2
 Mcu.Pin1=PE3
-Mcu.Pin10=PB1
-Mcu.Pin11=PE7
-Mcu.Pin12=PE8
-Mcu.Pin13=PE9
-Mcu.Pin14=PE10
-Mcu.Pin15=PE11
-Mcu.Pin16=PE12
-Mcu.Pin17=PE13
-Mcu.Pin18=PE14
-Mcu.Pin19=PE15
+Mcu.Pin10=PC5
+Mcu.Pin11=PB1
+Mcu.Pin12=PE7
+Mcu.Pin13=PE8
+Mcu.Pin14=PE9
+Mcu.Pin15=PE10
+Mcu.Pin16=PE11
+Mcu.Pin17=PE12
+Mcu.Pin18=PE13
+Mcu.Pin19=PE14
 Mcu.Pin2=PE4
-Mcu.Pin20=PB14
-Mcu.Pin21=PB15
-Mcu.Pin22=PC6
-Mcu.Pin23=PC7
-Mcu.Pin24=PC8
-Mcu.Pin25=PC9
-Mcu.Pin26=PA13
-Mcu.Pin27=PA14
-Mcu.Pin28=PC12
-Mcu.Pin29=PD1
+Mcu.Pin20=PE15
+Mcu.Pin21=PB14
+Mcu.Pin22=PB15
+Mcu.Pin23=PC6
+Mcu.Pin24=PC7
+Mcu.Pin25=PC8
+Mcu.Pin26=PC9
+Mcu.Pin27=PA13
+Mcu.Pin28=PA14
+Mcu.Pin29=PC12
 Mcu.Pin3=PE5
-Mcu.Pin30=PD2
-Mcu.Pin31=PD3
-Mcu.Pin32=PD4
-Mcu.Pin33=PD5
-Mcu.Pin34=PD6
-Mcu.Pin35=PD7
-Mcu.Pin36=PB5
-Mcu.Pin37=PB9
-Mcu.Pin38=PE0
-Mcu.Pin39=PE1
+Mcu.Pin30=PD1
+Mcu.Pin31=PD2
+Mcu.Pin32=PD3
+Mcu.Pin33=PD4
+Mcu.Pin34=PD5
+Mcu.Pin35=PD6
+Mcu.Pin36=PD7
+Mcu.Pin37=PB5
+Mcu.Pin38=PB9
+Mcu.Pin39=PE0
 Mcu.Pin4=PE6
-Mcu.Pin40=VP_FREERTOS_VS_CMSIS_V1
-Mcu.Pin41=VP_SYS_VS_tim1
-Mcu.Pin42=VP_TIM7_VS_ClockSourceINT
+Mcu.Pin40=PE1
+Mcu.Pin41=VP_FREERTOS_VS_CMSIS_V1
+Mcu.Pin42=VP_SYS_VS_tim1
+Mcu.Pin43=VP_TIM7_VS_ClockSourceINT
 Mcu.Pin5=PC13-TAMPER-RTC
 Mcu.Pin6=OSC_IN
 Mcu.Pin7=OSC_OUT
-Mcu.Pin8=PC4
-Mcu.Pin9=PC5
-Mcu.PinsNb=43
+Mcu.Pin8=PC0
+Mcu.Pin9=PC4
+Mcu.PinsNb=44
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F107VCTx
@@ -115,6 +123,8 @@ PB9.GPIOParameters=GPIO_Label
 PB9.GPIO_Label=SW_EXT_3
 PB9.Locked=true
 PB9.Signal=GPIO_Input
+PC0.Locked=true
+PC0.Signal=ADCx_IN10
 PC12.GPIOParameters=GPIO_Label
 PC12.GPIO_Label=SW3
 PC12.Locked=true
@@ -321,6 +331,8 @@ RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
 RCC.TimSysFreq_Value=72000000
 RCC.USBFreq_Value=48000000
 RCC.VCOOutput2Freq_Value=8000000
+SH.ADCx_IN10.0=ADC1_IN10,IN10
+SH.ADCx_IN10.ConfNb=1
 TIM7.IPParameters=Prescaler,Period
 TIM7.Period=1000
 TIM7.Prescaler=7200
